some ui changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     
     <div class="main">
-            <p id="messege">Player X's turn</p>
+            <p id="messege">Player X's turn !!!</p>
             <a href="index.html" id="play"> play again</a>
             <div class="grid">
                 <div class="hx"></div>
